Fixed table overflow. Therefore added class `tfixed` in css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@ div#outputs td, div#outputs th {
 	height: 32px;
 	background: transparent url(../img/ajax-loader.gif) no-repeat;
 }
-
+.tfixed{
+	table-layout:fixed;
+	word-wrap:break-word;	
+}
 
 
 
